--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html
@@ -210,8 +210,7 @@
                     </div>
                 </div>
             </div>
-        
-            <script src="/footer.js"></script>
-        
-        </div>
-        <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
+            <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
+        </body>
+        <script src="/script.js"></script>
+        </html>
