--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/iterative_design_process_notes.html
@@ -206,7 +206,7 @@
         
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions">Iterative design process Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B1/3.2.1_design_methods_and_processes.pdf">Iterative design process Questions</a>
                     </div>
                 </div>
             </div>
