--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/design_styles_and_movements_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/design_styles_and_movements_notes.html
@@ -52,7 +52,7 @@
     
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.4_design_movements.pdf">Design styles and movements Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B2/3.2.2_design_styles_and_movements.pdf">Design styles and movements Questions</a>
                     </div>
                 </div>
             </div>
