--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/designers_and_their_work_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/designers_and_their_work_notes.html
@@ -56,8 +56,7 @@
     
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.4_designers.pdf">Designers and their work
-                            Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B2/3.2.2_designers_and_their_work.pdf">Designers and their work Questions</a>
                     </div>
                 </div>
             </div>
