--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/polymer_enhancement_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/polymer_enhancement_notes.html
@@ -71,7 +71,7 @@
                     <h3><b>Topic test:</b></h3>
     
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\Materials\&A.pdf">Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A3/3.1.3_polymer_enhancement.pdf">Polymer enhancement Questions</a>
                     </div>
 
             
