--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_enhancement_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/wood_enhancement_notes.html
@@ -139,7 +139,7 @@
                     <h3><b>Topic test:</b></h3>
     
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Lamination_Q&A.pdf">Lamination Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A3/3.1.3_wood_enhancement.pdf">Wood enhancement Questions</a>
                     </div> 
                 </div>
             </div>
