--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/national_a_international_standards.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/national_a_international_standards.html
@@ -14,11 +14,11 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/healthandsafetylaws.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_alevel_design_and_make_notes_topics/design_methods_and_processes.html">Topic 1: Design methods and processes</a>
+                            <a href="aqa_alevel_design_and_make_notes_pages/national_a_international_standards_notes.html">National and international standards in product design</a>
                         </div>
                     </div>
                 </div>
