--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/selecting_appropriate_tools_equip_a_processes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/selecting_appropriate_tools_equip_a_processes.html
@@ -18,7 +18,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="aqa_alevel_design_and_make_notes_pages/national_a_international_standards_notes.html">National and international standards in product design</a>
+                            <a href="aqa_alevel_design_and_make_notes_pages/selecting_appropriate_tools_equipment_and_proces_notes.html">Selecting appropriate tools, equipment and processes</a>
                         </div>
                     </div>
                 </div>
