--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/socio_economic_influences_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/socio_economic_influences_notes.html
@@ -99,7 +99,7 @@
 
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions/Socio_Economic_Questions">Socio economic influences Questions</a>
+                        <a href="../../../../../../.../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B3/3.2.3_socio_economic_influences.pdf">Socio economic influences Questions</a>
                     </div>
                 </div>
             </div>
