--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/major_developments_in_technology_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/major_developments_in_technology_notes.html
@@ -125,7 +125,7 @@
 
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions/Tech_Development_Questions">Major developments in technology Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B3/3.2.3_major_developments_in_technology.pdf">Major developments in technology Questions</a>
                     </div>
                 </div>
             </div>
