--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/social_moral_and_ethical_issues_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/social_moral_and_ethical_issues_notes.html
@@ -219,7 +219,7 @@
 
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions/Ethics_Questions">Social, moral and ethical issues Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B3/3.2.3_social_moral_and_ethical_issues.pdf">Social, moral and ethical issues Questions</a>
                     </div>
                 </div>
             </div>
