--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/product_life_cycle_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/design_and_make/aqa_alevel_design_and_make_notes_topics/aqa_alevel_design_and_make_notes_pages/product_life_cycle_notes.html
@@ -241,7 +241,7 @@
 
                     <h3><b>Topic test:</b></h3>
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="../../../../../../../Questions/Life_Cycle_Questions">Product life cycle Questions</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Designing and making principles/Topic B3/3.2.3_product_life_cycle.pdf">Product life cycle Questions</a>
                     </div>
                 </div>
             </div>
