--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_forming_processes_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/paper_a_board_forming_processes_notes.html
@@ -74,7 +74,7 @@
                             </td>
                         </tr>
                     </table>
-                    <h3><b>Uses: </b>Metal fabrication, sign making, custom parts<br><br></h3>
+                    <h3><b>Uses: </b>Sign making, card designs<br><br></h3>
 
                     <h3 id="Creasing"><b><u>Creasing:</b></u></h3>
                     <h3>
@@ -136,19 +136,19 @@
                             </td>
                         </tr>
                     </table>
-                    <h3><b>Uses: </b>Metal parts, automotive, structural components<br><br></h3>
+                    <h3><b>Uses: </b>Cardboard<br><br></h3>
 
                 
                     </h3>
 
                     <div class="notes-content">
                         <div class="notes-content-intro">
-<!-- 
+
                             <h3><b>Topic test:</b></h3>
 
-                            This is a comment div class="blurbox" style="background-color: #bdbdbd;">
-                                <a href="\documents\Q&A\processes_techniques_special_tools_exercises\&A.pdf">Metal processes Questions</a>
-                            </div> -->
+                            <div class="blurbox" style="background-color: #bdbdbd;">
+                                <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_paper_and_board_forming_processes.pdf">Paper and board forming processes Questions</a>
+                            </div> 
                         </div>
                     </div>
 
