--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html
@@ -275,7 +275,7 @@
                     <h3><b>Topic test:</b></h3>
     
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\features_of_manufacturing_industries\Methods of production_Q&A.pdf">Methods of Production</a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_scales_of_production.pdf">Scales of production Questions</a>
                         </div>
 
         <script src="/footer.js"></script>
