--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html
@@ -144,6 +144,17 @@
                             <li>Reduces labour costs</li>
                         </ul>
                     </td>
+                </tr>
+        </table><br><br>
+
+        <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_efficient_use_of_materials.pdf">Efficient use of materials Questions</a>
+                </div>
+            </div>
+
+                    
 
     </div>
     
