--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html
@@ -385,7 +385,7 @@
                     <h3><b>Topic test:</b></h3>
     
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\features_of_manufacturing_industries\Methods of &A.pdf"></a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_the_use_of_computer_systems.pdf">The use of computer systems Questions</a>
                         </div>
 
         <script src="/footer.js"></script>
