--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/protcting_desgn_a_intelectual_prop_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/protcting_desgn_a_intelectual_prop_notes.html
@@ -172,7 +172,7 @@
                         <h3><b>Topic test:</b></h3>
     
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\information_handling_planning_exercises\Intellectual_Property_rights_Q&A.pdf">Property Rights Questions</a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A10/3.1.10_protecting_designs_and_intellectual_property.pdf">Protecting designs and intellectual property Questions</a>
                         </div>
                     </div>
                 </div>
