--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/design_communication_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/design_communication_notes.html
@@ -9,6 +9,9 @@
         <div class="quote">
             <h2>Design communication</h2>
         </div>
+        <div class="notes-content">
+                <div class="notes-content-intro">
+                </div>
         <h3><b><u>Communication and Presentation Techniques:</b></u></h3>
         <ul>
             <li>Used to convey proposals and intentions to clients, users, and manufacturers</li>
@@ -159,6 +162,11 @@
             </td>
         </tr>
     </table><br><br><br><br>
+    <h3><b>Topic test:</b></h3>
+
+                <div class="blurbox" style="background-color: #bdbdbd;">
+                    <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A14/3.1.14_design_communication.pdf">Design communication Questions</a>
+                </div>
             </div>
         </div>
 
