--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
@@ -166,7 +166,7 @@
                     <div class="portfolio-img-background" style="background-image:url(/images/portfolio13.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="../../../../../Questions (Word docs)/AQA A-Level Questions/maths_link.pdf">Mathematics for D&T</a>
+                            <a href="../../../../../exercises/exercise_level/exercise_examboard/edexcel_alevel_exercises/exercise_topics/MathematicsForD&T.html">Mathematics for D&T</a>
                             <!-- <a href="Notes\MathematicsForD&T.html">Mathematics for D&T</a> -->
                         </div>
                     </div>
