--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/aqa_safe_work_practices_notes.html
@@ -225,7 +225,7 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="\documents\Q&A\safe_working_practices_exercises\Adopting_safe_working_practices_Q&A.pdf">Adopting Safe Working Practices</a>
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A9/3.1.9_safe_working_practices.pdf">Safe working practices Questions</a>
                     </div>
 
 
