--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/safety_in_products_and_services_notes.html
@@ -116,7 +116,7 @@
                         <h3><b>Topic test:</b></h3>
     
                         <div class="blurbox" style="background-color: #bdbdbd;">
-                            <a href="\documents\Q&A\current_legislation_exercises\Consumer_rights_legislation_Q&A.pdf">Consumer Rights Legislation</a>
+                            <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A9/3.1.9_safety_in_products_and_services_to_the_customer.pdf">Safety in products and services to the customer Questions</a>
                         </div>
                     </div>
                 </div>
