--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/inclusive_design_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/aqa_technical_principles_alevel_notes_pages/inclusive_design_notes.html
@@ -51,7 +51,14 @@
                     <li>Increases market reach by addressing the needs of underrepresented groups.</li>
                     <li>Fosters inclusivity and equality, supporting social responsibility efforts.</li>
                 </ul><br>
+
+                <h3><b>Topic test:</b></h3>
+
+                    <div class="blurbox" style="background-color: #bdbdbd;">
+                        <a href="../../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A8/3.1.8_inclusive_design.pdf">Inclusive design Questions</a>
+                    </div>
             </div>
+            
         </div>
 
         <script src="/footer.js"></script>
