--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/aqa_alevel_notes.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <script src="/head.js" defer></script>
+        <script src="../../../../breadcrumb.js"></script>
     </head>
 
 <body style="background-color: rgb(255, 255, 255);">
@@ -35,7 +36,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="../aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html">Paper 2: Designing and Making Principles (Coming soon)</a>
+                            <a href="../aqa_alevel_notes/design_and_make/aqa_design_and_make_alevel_notes.html">Paper 2: Designing and Making Principles</a>
                         </div>
                     </div>
                 </div>
