--- a/notes/notes_level/notes_examboard/aqa_gcse_notes/aqa_gcse_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_gcse_notes/aqa_gcse_notes.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <script src="/head.js" defer></script>
+        <script src="../../../../breadcrumb.js"></script>
     </head>
 
 <body style="background-color: rgb(255, 255, 255);">
