--- a/notes/notes_level/notes_gcse_examboard.html
+++ b/notes/notes_level/notes_gcse_examboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <script src="/head.js" defer></script>
+        <script src="../../breadcrumb.js"></script>
     </head>
 
 <body style="background-color: rgb(255, 255, 255);">
@@ -35,7 +36,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
-                            <a href="notes_topics/.html">Edexcel GCSE Notes (Coming soon)</a>
+                            <a>Edexcel GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>
@@ -45,7 +46,7 @@
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
-                            <a href="notes_topics/.html">OCR GCSE Notes (Coming soon)</a>
+                            <a>OCR GCSE Notes (Coming soon)</a>
                         </div>
                     </div>
                 </div>                
