--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/enhancement_of_materials.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/enhancement_of_materials.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\polymer_enhancement_notes.html">Polymer enhancement</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A3/3.1.3_polymer_enhancement.pdf">Polymer enhancement</a>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\wood_enhancement_notes.html">Wood enhancement</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A3/3.1.3_wood_enhancement.pdf">Wood enhancement</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\metal_enhancement_notes.html">Metal enhancement</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A3/3.1.3_metal_enhancement.pdf">Metal enhancement</a>
                         </div>
                     </div>
                 </div>
