--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/forming_redistribution_a_addition_processes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/forming_redistribution_a_addition_processes.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/paper_a_board_forming_processes_notes.html">Paper and board forming processes</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_paper_and_board_forming_processes.pdf">Paper and board forming processes</a>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/polymer_processes_notes.html">Polymer processes</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_polymer_processes.pdf">Polymer processes</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/perfcharmat1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/metal_processes_notes.html">Metal processes</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_metal_processes.pdf">Metal processes</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/wood_processes_notes.html">Wood processes</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_wood_processes.pdf">Wood processes</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/safeWorkingPractice.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/the_use_of_adhesives_a_fixings_notes.html">The use of adhesives and fixings</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_the_use_of_adhesives_and_fixings.pdf">The use of adhesives and fixings</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio12.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/jigs_and_fixtures_notes.html">Jigs and fixtures</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A4/3.1.4_jigs_and_fixtures.pdf">Jigs and fixtures</a>
                         </div>
                     </div>
                 </div>
