--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/design_communication.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/design_communication.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/designinfluences.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/design_communication_notes.html">Design communication</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A14/3.1.14_design_communication.pdf">Design communication</a>
                         </div>
                     </div>
                 </div>
