--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/design_for_manufacturing_main_repair_a_disposal.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/design_for_manufacturing_main_repair_a_disposal.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/manufacture_repair_main_a_dispo_notes.html">Manufacture, repair, maintenance and disposal</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A11/3.1.11_manufacture_repair_maintenance_and_disposal.pdf">Manufacture, repair, maintenance and disposal</a>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\ease_of_manufacture_notes.html">Ease of manufacture</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A11/3.1.11_ease_of_manufacture.pdf">Ease of manufacture</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages\disassembly_notes.html">Disassembly</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A11/3.1.11_disassembly.pdf">Disassembly</a>
                         </div>
                     </div>
                 </div>
