--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/modern_industrial_and_commerical_practice.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/modern_industrial_and_commerical_practice.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/modernManufacturingMethods.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html">Scales of production</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_scales_of_production.pdf">Scales of production</a>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/standardsForProducts.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html">Efficient use of materials</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_efficient_use_of_materials.pdf">Efficient use of materials</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/stagesOfProductLifecycle.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html">The use of computer systems</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_the_use_of_computer_systems.pdf">The use of computer systems</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/sub_assemly_notes.html">Sub-assembly</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A6/3.1.6_sub_assembly.pdf">Sub-assembly</a>
                         </div>
                     </div>
                 </div>
