--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/performance_characteristics_of_materials.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/performance_characteristics_of_materials.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote5.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_pprs_a_brds_notes.html">Performance characteristics of papers and boards</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_papers_and_boards.pdf">Performance characteristics of papers and boards</a>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/polymersheet.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_plymer_shet_notes.html">Performance characteristics of polymer based sheet and film</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_polymer_based_sheet_and_film.pdf">Performance characteristics of polymer based sheet and film</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_woods_notes.html">Performance characteristics of woods</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_woods.pdf">Performance characteristics of woods</a>
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_metals_notes.html">Performance characteristics of metals</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_metals.pdf">Performance characteristics of metals</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/perform_chcteristic_of_polymers_notes.html">Performance characteristics of polymers</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_polymers.pdf">Performance characteristics of polymers</a>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnotecharacteristics.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/elastomers_notes.html">Elastomers</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_elastomers.pdf">Elastomers</a>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio9.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/biodegradable_polymers_notes.html">Biodegradable polymers</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_biodegradable_polymers.pdf">Biodegradable polymers</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnoteComposite.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_composites_notes.html">Composites</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_composites.pdf">Composites</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/qualityControl.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_smart_materials_notes.html">Smart materials</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_smart_materials.pdf">Smart materials</a>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote7.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_modern_materials_notes.html">Modern materials</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A2/3.1.2_modern_materials.pdf">Modern materials</a>
                         </div>
                     </div>
                 </div>
