--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/protecting_designs_and_intellectual_property.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/protecting_designs_and_intellectual_property.html
@@ -16,7 +16,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/portfolio10.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/protcting_desgn_a_intelectual_prop_notes.html">Protecting designs and intellectual property
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A10/3.1.10_protecting_designs_and_intellectual_property.pdf">Protecting designs and intellectual property
                             </a>
                         </div>
                     </div>
