--- a/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
+++ b/exercises/exercise_level/exercise_examboard/aqa_alevel_exercises/technical_principles/aqa_technical_principles_alevel_exercise_topics/the_use_of_finishes.html
@@ -43,7 +43,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote2.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/metal_finishing_notes.html">Metal finishing</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_metal_finishing.pdf">Metal finishing</a>
                         </div>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(/images/matnote1.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/wood_finishing_notes.html">Wood finishing</a>
+                            <a href="../../../../../../Questions (Word docs)/AQA A-Level Questions/Technical Principles/Topic A5/3.1.5_wood_finishing.pdf">Wood finishing</a>
                         </div>
                     </div>
                 </div>
